# napari-annotatin-plugin

./: .gitignore  README.md  pyproject.toml
src/napari_annotation_plugin/: __init__.py  __main__.py  config.py  data_io.py  models.py  napari.yaml  utils.py  widget.py
test-data/: README.txt  manifest.csv
test-data/case01_five_boxes_mixed/: image.tif  predictions.csv
test-data/case02_five_boxes_all_top/: image.tif  predictions.csv
test-data/case03_five_boxes_mixed_2/: image.tif  predictions.csv
test-data/case04_four_boxes/: image.tif  predictions.csv
test-data/case05_three_boxes/: image.tif  predictions.csv
test-data/case06_two_boxes/: image.tif  predictions.csv
test-data/case07_one_box_AP2_Image7/: image.tif  predictions.csv
test-data/case08_one_box_nonKI/: image.tif  predictions.csv
test-data/case09_five_boxes_Eps15/: image.tif  predictions.csv
test-data/case10_four_boxes_CLC/: image.tif  predictions.csv
tests/: test_io.py  test_utils.py
