[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napari-annotation-plugin"
version = "0.1.2"
description = "Napari plugin for fast review and correction of 2D object detection annotations on TIF images."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Annotation Plugin Contributors" }]
keywords = ["napari", "plugin", "annotation", "object-detection"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
# Runtime deps for the plugin code only. Napari + npe2 are expected from the
# environment (e.g. `module load napari`) unless you install the `bundled` extra.
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "qtpy>=2.0",
  "tifffile>=2022.2.2",
]

[project.optional-dependencies]
# Use when you do NOT have napari/npe2 from modules or conda; installs napari via pip.
bundled = [
  "napari[all]>=0.4.18",
  "npe2>=0.7.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/haoranch3n/napari-annotatin-plugin"

[project.entry-points."napari.manifest"]
napari-annotation-plugin = "napari_annotation_plugin:napari.yaml"

[tool.hatch.build.targets.wheel]
packages = ["src/napari_annotation_plugin"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
